@@ -5,7 +5,6 @@ require 'semantic_puppet'
 require 'puppet/pops/lookup/context'
 require 'yaml'
 require 'fileutils'
-require 'pry'
 
 puppetver = SemanticPuppet::Version.parse(Puppet.version)
 requiredver = SemanticPuppet::Version.parse("4.10.0")
@@ -60,26 +59,6 @@ describe 'lookup' do
   checks_yaml = {
     'version' => '2.0.0',
     'checks' => {
-      'check1' => {
-        'type' => 'puppet-class-parameter',
-        'settings' => {
-          'parameter' => 'test_module::test_param',
-          'value' => 'a string',
-        },
-        'ces' => [
-          'ce1',
-        ],
-      },
-      'check2' => {
-        'type' => 'puppet-class-parameter',
-        'settings' => {
-          'parameter' => 'test_module::test_param2',
-          'value' => 'another string',
-        },
-        'ces' => [
-          'ce1',
-        ],
-      },
       'el_check' => {
         'type' => 'puppet-class-parameter',
         'settings' => {
@@ -125,7 +104,7 @@ describe 'lookup' do
 
   fixtures = File.expand_path('../../fixtures', __dir__)
 
-  compliance_dir = File.join(fixtures, 'modules', 'test_module', 'SIMP', 'compliance_profiles')
+  compliance_dir = File.join(fixtures, 'modules', 'test_module_01', 'SIMP', 'compliance_profiles')
   FileUtils.mkdir_p(compliance_dir)
 
   File.open(File.join(compliance_dir, 'profile.yaml'), 'w') do |fh|
@@ -141,26 +120,12 @@ describe 'lookup' do
   end
 
   on_supported_os.each do |os, os_facts|
-    context "on #{os} with compliance_markup::enforcement and a non-existent profile" do
-      let(:facts) do
-        os_facts.merge('target_compliance_profile' => 'not_a_profile')
-      end
-
-      let(:hieradata) { 'compliance-engine' }
-
-      it { is_expected.to run.with_params('test_module::test_param').and_raise_error(Puppet::DataBinding::LookupError, "Function lookup() did not find a value for the name 'test_module::test_param'") }
-    end
-
     context "on #{os} with compliance_markup::enforcement and an existing profile" do
       let(:facts) do
         os_facts.merge('target_compliance_profile' => 'profile_test')
       end
 
       let(:hieradata) { 'compliance-engine' }
-
-      # Test unconfined data.
-      it { is_expected.to run.with_params('test_module::test_param').and_return('a string') }
-      it { is_expected.to run.with_params('test_module::test_param2').and_return('another string') }
 
       # Test for confine on a single fact in checks.
       if os_facts[:osfamily] == 'RedHat'
